--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="home.html">QE CompSci & Robotics</a>
+          <a class="navbar-brand" href="index.html">QE CompSci & Robotics</a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="home.html">Home</a></li>
+            <li class="active"><a href="index.html">Home</a></li>
             <li><a href="about.html">About/Opportunities</a></li>
             <li><a href="events.html">Events</a></li>
             <li><a href="mercer.html">Mercer's Kitchen</a></li>
